Fix images in People - prevent them from popping out of container (#23)
Thank you!

--- a/css/header.css
+++ b/css/header.css
@@ -120,7 +120,9 @@
 
     height: 0px;
     overflow: hidden;
-    transition: height 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
 }
 
 
