--- a/css/people.css
+++ b/css/people.css
@@ -48,9 +48,10 @@
 }
 
 .headshot-image-container {
-	width: 260px;
-	height: 260px;
-	/*height: auto;*/
+	display: block;
+	width: 100%;
+	/* height: 100%; */
+	height: auto;
 }
 
 .headshot-image-container img {
@@ -67,10 +68,11 @@
 }
 
 .headshot-description {
+	top:10px;
 	display: block;
 	font-style: italic;
 	text-align: center;
-	position: absolute;
+	position: relative;
 	bottom: 10px;
 	width: 90%;
 	min-height: 20px;
